# gnss-shitfuckery

./: CMakeLists.txt  CMakePresets.json  README.md
board/athenavi/: CMakeLists.txt  athenavi.ioc  stm32f446retx_flash.ld
board/athenavi/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
board/athenavi/Core/Src/: gpio.c  iwdg.c  main.c  spi.c  stm32f4xx_it.c  usart.c
board/athenavi/USB_DEVICE/App/: usbd_desc.c
board/athenavi/bsp/: bsp.cpp
board/athenavi/cmake/stm32cubemx/: CMakeLists.txt
src/: main.cpp
src/bsp/: bsp.h
